--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #002542;
+    /* --background: #002542; */
     --foreground: #ededed;
   }
 }
